--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
 	<h2>What does \(P_s\) look like over time given a spike?</h2>
 	<p>Exponential function \(K(t)=e^{-\frac{t}{\tau_s}}\) gives reasonable fit for some synapes</p>
 	<p>Others can be fit using "Alpha" function: \(\alpha(t)=\frac{t}{\tau_{peak}}\cdot e^{1-\left(\frac{t}{\tau_{peak}}\right)}\)</p>
+	<h2>Perceptron Learning Rule</h2>
+	<p>$$v = \Phi(\Sigma_i w_iu_i-\mu)$$</p>
+	<p>$$\Delta w_i=\epsilon(v^d - v)u_i$$</p>
+	<p>$$\Delta \mu=-\epsilon(v^d - v)$$</p>
       <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
       </div>
     </div>
