--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Modeling Synaptic Inputs<h1>
-	<p>$$\tau_m\frac{dV}{dt} = -((V-E_L)+g_s(V-E_s)r_m)+I_eR_m$$</p>
+	<p>$$\tau_m\frac{dV}{dt} = -\left(\left(V-E_L\right)+g_s\left(V-E_s\right)r_m\right)+I_eR_m$$</p>
         <p>This equation tells us that the change in membrane potential of the post synaptic neuron is driven
-	by the current voltage minus the leak potential \((V-E_L)\) (LEAK TERM) plus the synaptic 
+	by the current voltage minus the leak potential \((V-E_L)\) (LEAK TERM) plus the synaptic
         contribution which is
-	\(g_s(V-E_s)r_m\) where \(g_s\) is the synaptic conductance and \(V-E_s\) is the voltage 
+	\(g_s(V-E_s)r_m\) where \(g_s\) is the synaptic conductance and \(V-E_s\) is the voltage
 	minus the synapse potential. E is the equilibrium protential.</p>
 <p>for an excitatory synapse the \(E_s > E_L\) for an inhibitory synapse \(E_s < E_L\).</p>
 
@@ -80,14 +80,14 @@
 	<p>Assume that \(\beta_s\) represents the closing raet of channels</p>
 	<p>\(P_s\) is of course the faction of channels currently open and the \((1-P_s)\) is the
 	fraction of channels closed.</p>
-	<p>The equation for the change in the probability of the fraction of open channels 
+	<p>The equation for the change in the probability of the fraction of open channels
 	is given by the equation</p>
 	<p>$$\frac{dP_s}{dt}=\alpha_s(1-P_s)-\beta_sP_s$$</p>
 	<h2>What does \(P_s\) look like over time given a spike?</h2>
 	<p>Exponential function \(K(t)=e^{-\frac{t}{\tau_s}}\) gives reasonable fit for some synapes</p>
 	<p>Others can be fit using "Alpha" function: \(\alpha(t)=\frac{t}{\tau_{peak}}\cdot e^{1-\left(\frac{t}{\tau_{peak}}\right)}\)</p>
 	<h2>Perceptron Learning Rule</h2>
-	<p>$$v = \Theta(\Sum_i w_iu_i-\mu)$$</p>
+	<p>$$v = \Theta\left(\sum_i w_iu_i-\mu\right)$$</p>
 	<p>$$\Delta w_i=\epsilon(v^d - v)u_i$$</p>
 	<p>$$\Delta \mu=-\epsilon(v^d - v)$$</p>
       <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
