--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         contribution which is
 	\(g_s(V-E_s)r_m\) where \(g_s\) is the synaptic conductance and \(V-E_s\) is the voltage
 	minus the synapse potential. E is the equilibrium protential.</p>
-<p>for an excitatory synapse the \(E_s > E_L\) for an inhibitory synapse \(E_s < E_L\).</p>
+<p>for an excitatory synapse the \(E_s > E_L\) for an inhibitory synapse \(E_s &lt; E_L\).</p>
 
 	<p>Synaptic conductance \(g_s\) is the probability of postsynaptic channel opening
 	(= fraction of channels opened) </p>
@@ -73,7 +73,7 @@
 	<h2>Basic Synapse Model</h2>
 	<ul>
 	<li>Assume \(P_{rel}=1\)
-	<li>Model the effect of a single spike input on \(P_s\) <- fraction of channels opened
+	<li>Model the effect of a single spike input on \(P_s\) &lt;- fraction of channels opened
 	<li>Kinetic Model of postsynaptic channels
 	</ul>
 	<p>Assume that \(\alpha_s\) represents the opening rate of channels</p>
