Corrected minor spelling

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 	<li>Kinetic Model of postsynaptic channels
 	</ul>
 	<p>Assume that \(\alpha_s\) represents the opening rate of channels</p>
-	<p>Assume that \(\beta_s\) represents the closing raet of channels</p>
+	<p>Assume that \(\beta_s\) represents the closing rate of channels</p>
 	<p>\(P_s\) is of course the faction of channels currently open and the \((1-P_s)\) is the
 	fraction of channels closed.</p>
 	<p>The equation for the change in the probability of the fraction of open channels
