--- a/computationalGraphLanguage.html
+++ b/computationalGraphLanguage.html
@@ -1,36 +1,35 @@
 <!doctype html>
 
 <meta charset="utf-8">
-<script src="http://distill.pub/template.v1.js"></script>
+<script src="//distill.pub/template.v1.js"></script>
 <!--
 <script type="text/javascript" async
-  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML">
+  src="//cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML">
 </script>
 -->
 <script type="text/javascript" async
-  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS_HTML">
+  src="//cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS_HTML">
 </script>
 
 <script type="text/front-matter">
   title: "Computational Graph Language"
 	description: "A quick treatise on the concept of computational graph language and how it can be used to compute partial derivatives for classic gradient descent in machine learning"
 	authors:
-		- Reginald Carey: http://ReggieCarey.github.io
-	affiliations:
-		- The MITRE Corporation : http://mitre.org
-		- University of Maryland College Park : http://umd.edu
+		- Reginald Carey: http://carey-agi.com
+    affiliations:
+		- UMD NeuroTheory Lab: http://neurotheory.umd.edu
 </script>
 
 <dt-article class="l-page">
   <h1>Computational Graph Language</h1>
 
-	<p>This article is an attempt to describe for my own edification and learning 
-	the concepts behind using a graph language to compute partial derivatives.  
-	I draw on classroom slides from <dt-cite key="Srihari2017"></dt-cite>. 
-	His work describes the basics of what is involved in the process and how it 
+	<p>This article is an attempt to describe for my own edification and learning
+	the concepts behind using a graph language to compute partial derivatives.
+	I draw on classroom slides from <dt-cite key="Srihari2017"></dt-cite>.
+	His work describes the basics of what is involved in the process and how it
 	can be used in the process of machine learning.</p>
 
-	<p>This data is critical to the understanding of automatic differentiation 
+	<p>This data is critical to the understanding of automatic differentiation
 	that occurs in frameworks such as Tensorflow and Theano.</p>
 
 <dt-code block language="javascript">
